# exoskeleton

./: .gitignore  CMakeLists.txt  README.md  notes.md  package.xml
arm26/: model.config  model.sdf
arm26/meshes/collisions/: arm_r_2distph.dae  arm_r_2midph.dae  arm_r_2proxph.dae  arm_r_3distph.dae  arm_r_3mc.dae  arm_r_3proxph.dae  arm_r_4distph.dae  arm_r_4midph.dae  arm_r_4proxph.dae  arm_r_5distph.dae  arm_r_5mc.dae  arm_r_5proxph.dae  arm_r_capitate.dae  arm_r_hamate.dae  arm_r_humerus.dae  arm_r_pisiform.dae  arm_r_radius.dae  arm_r_scaphoid.dae  arm_r_thumbdist.dae  arm_r_thumbprox.dae  arm_r_triquetrum.dae  ground_jaw.dae  ground_r_clavicle.dae  ground_ribs.dae  ground_skull.dae  ground_spine.dae
arm26/meshes/visuals/: arm_r_2distph.dae  arm_r_2mc.dae  arm_r_2proxph.dae  arm_r_3midph.dae  arm_r_4distph.dae  arm_r_4mc.dae  arm_r_4midph.dae  arm_r_5distph.dae  arm_r_5midph.dae  arm_r_capitate.dae  arm_r_hamate.dae  arm_r_humerus.dae  arm_r_lunate.dae  arm_r_radius.dae  arm_r_scaphoid.dae  arm_r_thumbdist.dae  (+7 more)
cmake/: FindOpenSim.cmake
data/: act_1.csv  act_10.csv  act_2.csv  act_3.csv  act_4.csv  act_5.csv  act_6.csv  act_7.csv  act_8.csv  act_9.csv  metab.csv  osim_pp_pop_5_gen_10_tourn_3_lb  osim_pp_pop_5_gen_10_tourn_3_pop  osim_pp_pop_5_gen_5_tourn_3_lb  osim_pp_pop_5_gen_5_tourn_3_pop  osim_pp_pop_5_gen_5_tourn_3_with_min_lb  osim_pp_pop_5_gen_5_tourn_3_with_min_pop  pop_5_gen_20_tourn_10  yo.csv
launch/: record_metab_cost.launch
models/Arm/: cardsflow.xml  logfile.txt  model.sdf  muscles.osim
models/ExoCARDSFlow/: cardsflow.xml  logfile.txt  model.config  model.sdf  muscles.osim
models/ExoJoints/: cardsflow.xml  logfile.txt  model.config  model.sdf  model.urdf  muscles.osim
models/ExoSuit/: cardsflow.xml  logfile.txt  model.config  model.sdf  muscles.osim
models/ExoSuitNoJoints/: model.config  model.sdf  muscles.osim
models/ExoSuitPoC/: model.config  model.sdf
models/ExoSuitRaw/: logfile.txt  model.config  model.sdf
models/ExoSuitWithJoints/: cardsflow.xml  logfile.txt  model.config  model.sdf  model.urdf
models/ExoWtihSkeletonNoJoints/: model.config  model.sdf
models/SimpleCube/: model.config  model.sdf
models/arm26NoJoints/: model.config  model.sdf  muscles.osim
models/msj_plattform/: cardsflow.xml  logfile.txt  model.config  model.sdf  muscles.osim
models/myoarm_nst/: model.config  model.sdf  muscles.osim
models/myoarm_small/: model.config  model.sdf  muscles.osim
models/opensim_knee_jerk_tut/: model.config  model.sdf  muscles.osim
output/: model.config  model.sdf  muscles.osim
output/CARDSFlowExo/: cardsflow.xml  conf1.osim  conf2.osim  conf3.osim  exo_muscles.osim  model.config  model.sdf  model.urdf  muscles.osim
output/ExoSkeleton/: model.config  model.sdf
output/arm26/: cardsflow.xml  model.sdf  muscles.osim
output/leg6dof9musc/: model.config  model.sdf  muscles.osim
plot/: all_metabolic_conf.xml  arm_joints.xml  exosuit_conf.xml  umbergerActMaint_rate_cong.xml  umbergerTotal_conf.xml
resource/: arm26.osim  arm26_controls.sto  arm26_controls.xml  arm26_states.sto  raw_arm26_controls.csv  raw_arm26_states.csv
scripts/: cardsflowexo_motion.sh  control_activation.py  delete_model.py  exocardsflow_motion.sh  exosuit_flex_once.sh  exosuit_motion0.sh  exosuit_unflex_once.sh  flex.py  float_to_osim.py  float_to_vp.py  get_metab_cost_service.py  get_metabolic_costs.py  incr_activation.py  join_models.py  metab_cost_to_fitness.py  metab_record_skel_mot.sh  metab_to_csv.py  osim_converter.py  print_logbook.py  sim_controller.py  skeleton_flex_once.sh  skeleton_motion.sh  spawn_model.py  stl_bounds.py  structure_optimization.py  temp.osim  test_cardsflow.xml  vtp_dae_converter.py
scripts/GetJointInfo/: GetJointInfo.manifest  GetJointInfo.py
src/: exo_motion.cc  joint_property_plugin.cc  metabolic_plugin.cc  metabolic_test.cpp  talker.cpp
(+225 files in other folders)
